# rust-ffi-demo

./: .gitignore  Cargo.toml  README.md  build.rs
calling-ffi/cpp/: CMakeLists.txt
calling-ffi/cpp/src/: ffi.h  main.cpp
calling-ffi/node/: package-lock.json  package.json
calling-ffi/node/src/: calling-rust-in-node.js  print_ffi_types.js
calling-ffi/rust/: build.rs
calling-ffi/rust/src/: main.rs  manual_bindings.rs
cpp/: CMakeLists.txt
cpp/src/: main.cpp
cpp/src/dynamic-lib/: lib.cpp  lib.h
ffi-dynamic-lib/cpp/src/: main.cpp
ffi-dynamic-lib/cpp/src/dynamic-lib/: lib.cpp  lib.h
ffi-dynamic-lib/rust/: Cargo.toml
ffi-dynamic-lib/rust/src/: lib.rs
src/: build.rs  ffi_bindings.rs  main.rs  manual_bindings.rs
